[gd_scene load_steps=31 format=3 uid="uid://dsn2i83vgnnpy"]

[ext_resource type="Script" path="res://Collectibles/collectibleAdvanced_handleCollect.gd" id="1_odj8i"]
[ext_resource type="Texture2D" uid="uid://d0c1wtyv5l07k" path="res://Assets/Graphics/sprites/sprites_general.png" id="2_tsp32"]
[ext_resource type="AudioStream" uid="uid://7qosqkhuroeh" path="res://Assets/Sounds/sfx/collect4.wav" id="3_2jbb0"]
[ext_resource type="Material" uid="uid://b5ws7ks5frcgv" path="res://Collectibles/bonus_material.tres" id="4_ttsq5"]
[ext_resource type="AudioStream" uid="uid://b86wlkuhlqeoj" path="res://Assets/Sounds/sfx/effect_slash.wav" id="4_yswqj"]
[ext_resource type="AudioStream" uid="uid://x0febgodc1kg" path="res://Assets/Sounds/sfx/longer_effect1.wav" id="5_muvct"]
[ext_resource type="Theme" uid="uid://csdwsl3byrm40" path="res://Themes/collectedScore_theme.tres" id="5_rprjx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_umx5j"]
atlas = ExtResource("2_tsp32")
region = Rect2(432, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e6jj"]
atlas = ExtResource("2_tsp32")
region = Rect2(480, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncues"]
atlas = ExtResource("2_tsp32")
region = Rect2(528, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2v2r"]
atlas = ExtResource("2_tsp32")
region = Rect2(576, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_61mxq"]
atlas = ExtResource("2_tsp32")
region = Rect2(624, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyryp"]
atlas = ExtResource("2_tsp32")
region = Rect2(672, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbvrm"]
atlas = ExtResource("2_tsp32")
region = Rect2(720, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1mwy"]
atlas = ExtResource("2_tsp32")
region = Rect2(768, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttd4u"]
atlas = ExtResource("2_tsp32")
region = Rect2(816, 816, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk11p"]
atlas = ExtResource("2_tsp32")
region = Rect2(864, 816, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_tm4hn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umx5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e6jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncues")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2v2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61mxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyryp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbvrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1mwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttd4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk11p")
}],
"loop": true,
"name": &"anim",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lgne"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_snhod"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-24, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../collectedDisplayAnimAnchor/collectedDisplay:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../collectedDisplayAnimAnchor/collectedDisplay:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../collectedDisplayAnimAnchor/collectedDisplay:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../collectedDisplayAnimAnchor/collectedDisplay:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CollisionShape2D:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("AnimatedSprite2D:position:x")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("AnimatedSprite2D:position:y")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_wwvab"]
resource_name = "loop"
length = 4.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-24, -0.25, 0, 0.7, 0, 24, -0.6, -1, 0.6, -1, -24, -0.6, 1, 0.6, 1),
"times": PackedFloat32Array(0, 2, 4)
}

[sub_resource type="Animation" id="Animation_bjdi4"]
resource_name = "remove"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -48, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yo3ck"]
_data = {
"RESET": SubResource("Animation_snhod"),
"loop": SubResource("Animation_wwvab"),
"remove": SubResource("Animation_bjdi4")
}

[sub_resource type="Animation" id="Animation_u6l55"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-220, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-80, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("collectedDisplay:material:shader_parameter/strength")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("collectedDisplay:theme_override_font_sizes/font_size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("%AnimatedSprite2D:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b6f8u"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4h6n2"]
resource_name = "hit_finalLevel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 0, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_gitew"]
resource_name = "score_value"
length = 3.0
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-220, -0.25, 0, 0.25, 0, -220, -0.25, 0, 0.25, 0, -220, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.75, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-80, -0.25, 0, 0.25, 0, -80, -0.25, 0, 1.5, 0, -240, 0, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.75, 3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.75, 3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.75, 3)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.75, 3)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.75, 3)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("collectedDisplay:theme_override_font_sizes/font_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, 24, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ihjei"]
_data = {
"RESET": SubResource("Animation_u6l55"),
"hit": SubResource("Animation_b6f8u"),
"hit_finalLevel": SubResource("Animation_4h6n2"),
"score_value": SubResource("Animation_gitew")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gip66"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5i8c1"]
size = Vector2(768, 768)

[node name="Shrine Gem" type="CharacterBody2D" groups=["Persist"]]
texture_filter = 1
collision_layer = 0
floor_max_angle = 1.0472
floor_snap_length = 5.0
script = ExtResource("1_odj8i")
collectibleScoreValue = 500
hard_to_collect = true
animation_always = true
floating = true
collectable = false
upDown_loop = true
is_shrineGem = true
shrineGem_destructible = true
shrineGem_giveScore = true
shrineGem_spawnItems = true
spawnedAmount = 20
SPEED = 500.0

[node name="Area2D" type="Area2D" parent="." groups=["Collectibles"]]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_tm4hn")
animation = &"anim"
autoplay = "anim"
frame_progress = 0.599373

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_2lgne")

[node name="collect1" type="AudioStreamPlayer2D" parent="Area2D"]
unique_name_in_owner = true
stream = ExtResource("3_2jbb0")
volume_db = 10.0

[node name="hit1" type="AudioStreamPlayer2D" parent="Area2D"]
unique_name_in_owner = true
stream = ExtResource("4_yswqj")
volume_db = 10.0

[node name="break1" type="AudioStreamPlayer2D" parent="Area2D"]
unique_name_in_owner = true
stream = ExtResource("5_muvct")
volume_db = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_yo3ck")
}

[node name="Timer" type="Timer" parent="Area2D"]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[node name="collectedDisplayAnimAnchor" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -220.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = 80.0
color = Color(1, 1, 1, 0)

[node name="collectedDisplay" type="Label" parent="collectedDisplayAnimAnchor"]
unique_name_in_owner = true
z_index = 25
texture_filter = 2
material = ExtResource("4_ttsq5")
layout_mode = 0
offset_right = 440.0
offset_bottom = 160.0
theme = ExtResource("5_rprjx")
theme_override_font_sizes/font_size = 0
text = "test"
horizontal_alignment = 1

[node name="AnimationPlayer2" type="AnimationPlayer" parent="collectedDisplayAnimAnchor"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ihjei")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
position = Vector2(-4.19617e-05, -4.19617e-05)
scale = Vector2(0.512, 0.512)
rect = Rect2(-500, -500, 1000, 1000)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_gip66")

[node name="collisionCheck_delay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="shrine gem checkpoint trigger" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="shrine gem checkpoint trigger"]
shape = SubResource("RectangleShape2D_5i8c1")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_collectible_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_collectible_exited"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="collectedDisplayAnimAnchor/AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
[connection signal="timeout" from="collisionCheck_delay" to="." method="_on_collision_check_delay_timeout"]
[connection signal="body_entered" from="shrine gem checkpoint trigger" to="." method="_on_shrine_gem_checkpoint_trigger_body_entered"]
